--- a/index.html
+++ b/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dodkes cloud storage</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h4>Dodkes cloud storage</h4>
-      <div class="drop-zone">
-        <p>Drop files here or click to upload</p>
-      </div>
-      <input hidden type="file" id="file-input" multiple accept="image/*" />
-    </div>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
